--- a/app/Resources/views/register/register.html.twig
+++ b/app/Resources/views/register/register.html.twig
@@ -7,7 +7,19 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+
+        {{ form_start(form) }}
+            {{ form_row(form.username) }}
+            {{ form_row(form.email) }}
+            {{ form_row(form.plainPassword.first) }}
+            {{ form_row(form.plainPassword.second) }}
+
+            <button type="submit">Register!</button>
+        {{ form_end(form) }}
+        
+        {% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
+
