--- a/app/Resources/views/register/register.html.twig
+++ b/app/Resources/views/register/register.html.twig
@@ -10,10 +10,12 @@
         {% block body %}
 
         {{ form_start(form) }}
-            {{ form_row(form.username) }}
+            {{ form_row(form.firstName) }}
+            {{ form_row(form.lastName) }}
             {{ form_row(form.email) }}
             {{ form_row(form.plainPassword.first) }}
             {{ form_row(form.plainPassword.second) }}
+            {{ form_row(form.termsAccepted) }}
 
             <button type="submit">Register!</button>
         {{ form_end(form) }}
