--- a/app/Resources/views/app-base.html.twig
+++ b/app/Resources/views/app-base.html.twig
@@ -10,6 +10,6 @@
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
         <div id="app" />
-        <script src="{{ asset(public/bundle.js) }}" type="text/javascript"></script>
+        <script src="{{ asset('/bundle.js') }}" type="text/javascript"></script>
     </body>
 </html>
