--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -1,5 +1,12 @@
 nav.navigation-top {
   background: #FFFFFF; }
+nav.sidebar {
+  width: 120px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  background: red; }
 .wrapper {
   box-sizing: border-box;
   max-width: 1200px;
@@ -2026,8 +2033,11 @@ body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0; }
+  body h1, body h2, body h3, body h4, body h5, body h6,
   body p, body a, body span, body div {
-    font-family: inherit; }
+    font-family: inherit;
+    margin: 0;
+    padding: 0; }
 
 * {
   box-sizing: border-box; }
