--- a/web/src/containers/style.scss
+++ b/web/src/containers/style.scss
@@ -4,8 +4,11 @@ body {
 	margin: 0;
 	padding: 0;
 	
+	h1, h2, h3, h4, h5, h6, 
 	p, a, span, div{
 		font-family: inherit;
+		margin: 0;
+		padding: 0;
 	}
 }
 
