--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -1,12 +1,67 @@
 nav.navigation-top {
-  background: #FFFFFF; }
+  background: #FFFFFF;
+  margin-left: 80px;
+  padding: 20px;
+  width: calc( 100% - 80px); }
+  nav.navigation-top h1 {
+    color: #58a4f2;
+    font-weight: 300;
+    margin-bottom: 10px; }
+  nav.navigation-top ul.navigation-links {
+    margin: 0;
+    padding: 0;
+    list-style: none; }
+    nav.navigation-top ul.navigation-links li {
+      display: inline-block; }
+    nav.navigation-top ul.navigation-links a {
+      position: relative;
+      color: #2d2e39;
+      text-decoration: none;
+      margin-right: 15px; }
+      nav.navigation-top ul.navigation-links a.active::after {
+        content: "";
+        position: absolute;
+        width: 5px;
+        height: 5px;
+        border-radius: 10px;
+        background: #58a4f2;
+        bottom: -10px;
+        left: 50%;
+        margin-left: -2.5px; }
+  nav.navigation-top .navigation-profile {
+    text-align: right; }
+    nav.navigation-top .navigation-profile a {
+      width: 63px;
+      height: 63px;
+      text-align: center;
+      background: #e9386e;
+      display: inline-block;
+      border-radius: 100px;
+      color: #fff;
+      font-size: 24px;
+      padding: 15px; }
 nav.sidebar {
-  width: 120px;
+  width: 80px;
   position: fixed;
   left: 0;
   top: 0;
   bottom: 0;
-  background: red; }
+  background: #2d2e39;
+  padding-top: 103px; }
+  nav.sidebar ul {
+    margin: 0;
+    padding: 0;
+    list-style: none; }
+    nav.sidebar ul li {
+      width: 80px;
+      height: 80px; }
+    nav.sidebar ul a {
+      width: 100%;
+      height: 100%;
+      display: block;
+      transition: background 0.2s linear; }
+      nav.sidebar ul a:hover, nav.sidebar ul a.active {
+        background: #58a4f2; }
 .wrapper {
   box-sizing: border-box;
   max-width: 1200px;
@@ -2033,11 +2088,16 @@ body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0; }
-  body h1, body h2, body h3, body h4, body h5, body h6,
-  body p, body a, body span, body div {
-    font-family: inherit;
-    margin: 0;
-    padding: 0; }
+
+h1, h2, h3, h4, h5, h6,
+p, a, span, div {
+  font-family: inherit;
+  margin: 0;
+  padding: 0; }
+
+a {
+  text-decoration: none; }
 
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  outline: none; }
