--- a/web/src/components/navigation/components/Sidebar/style.scss
+++ b/web/src/components/navigation/components/Sidebar/style.scss
@@ -1,8 +1,32 @@
 nav.sidebar{
-	width: 120px;
+	width: 80px;
 	position: fixed;
 	left: 0;
 	top: 0;
 	bottom: 0;
-	background: red;
+	background: #2d2e39;
+	padding-top: 103px;
+
+	ul{
+	margin: 0;
+	padding: 0;
+	list-style: none;	
+
+		li{
+			width: 80px;
+			height: 80px;
+		}
+
+		a{
+			width: 100%;
+			height: 100%;
+			display: block;
+			transition: background 0.2s linear;
+
+			&:hover,
+			&.active{
+				background: #58a4f2;
+			}
+		}
+	}
 }
