--- a/web/src/containers/style.scss
+++ b/web/src/containers/style.scss
@@ -2,16 +2,21 @@ body {
 	background: #edf0f9;
 	font-family: 'Roboto', sans-serif;
 	margin: 0;
+	padding: 0; 
+}
+
+h1, h2, h3, h4, h5, h6, 
+p, a, span, div{
+	font-family: inherit;
+	margin: 0;
 	padding: 0;
-	
-	h1, h2, h3, h4, h5, h6, 
-	p, a, span, div{
-		font-family: inherit;
-		margin: 0;
-		padding: 0;
-	}
+}
+
+a{
+	text-decoration: none;
 }
 
 * {
 	box-sizing: border-box;
+	outline: none;
 }
