--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -2129,6 +2129,24 @@ nav.navigation-top {
         bottom: -10px;
         left: 50%;
         margin-left: -2.5px; }
+.search {
+  margin: 15px 20px; }
+  .search input {
+    padding: 10px 20px;
+    border: 1px solid #cccccc; }
+
+.people-row {
+  border: 1px solid #cccccc;
+  border-left: 3px solid #58a4f2;
+  padding: 10px 20px;
+  margin: 15px 20px; }
+  .people-row .profile-avatar a {
+    font-size: 14px;
+    width: 38px;
+    height: 38px;
+    padding: 11px 0; }
+  .people-row > div {
+    margin-right: 15px; }
 .profile-links {
   list-style: none;
   margin: 40px 0 0;
