--- a/app/Resources/views/app-base.html.twig
+++ b/app/Resources/views/app-base.html.twig
@@ -5,6 +5,7 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="stylesheet" href="{{ asset('/assets/css/fonts.css') }}" />
         <link rel="stylesheet" href="{{ asset('/assets/css/style.css') }}" />
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
