--- a/web/src/scenes/PeopleManagement/components/People/style.scss
+++ b/web/src/scenes/PeopleManagement/components/People/style.scss
@@ -1,21 +1,29 @@
 .search{
+	position: relative;
 	margin: 15px 20px;
 
 	input {
-		padding: 10px 20px;
+		padding: 10px 20px 10px 60px;
 		border: 1px solid #cccccc;
+		width: 100%;
+    	display: block;
+		height: 60px;
 	}
 
 	label{
-
+		position: absolute;
+		left: 20px;
+		top: 19px;
 	}
 }
 
 .people-row {
 	border: 1px solid #cccccc;
-	border-left: 3px solid #58a4f2;
+	border-left: 5px solid #58a4f2;
 	padding: 10px 20px;
 	margin: 15px 20px;
+	height: 60px;
+	font-size: 14px;
 
 	.profile-avatar a{
 		font-size: 14px;
@@ -26,5 +34,18 @@
 
 	> div {
 		margin-right: 15px;
+	}
+
+	.people-name{
+		font-weight: bold;
+	}
+
+	.people-link{
+		margin-left: auto;
+    	margin-right: 0;
+
+    	a{
+    		color: inherit;
+    	}
 	}
 }
