--- a/web/src/scenes/PeopleManagement/components/People/style.scss
+++ b/web/src/scenes/PeopleManagement/components/People/style.scss
@@ -1,10 +1,17 @@
+.people-panel{
+	font-size: 14px;
+}
+
 .search{
 	position: relative;
-	margin: 15px 20px;
+	margin: 0 0 15px;
+
+	form{
+		width: 100%;
+	}
 
 	input {
-		padding: 10px 20px 10px 60px;
-		border: 1px solid #cccccc;
+		padding: 10px 20px 10px 77px;
 		width: 100%;
     	display: block;
 		height: 60px;
@@ -14,16 +21,29 @@
 		position: absolute;
 		left: 20px;
 		top: 19px;
+
+		&::after{
+			content: "";
+		    position: absolute;
+		    right: -17px;
+		    height: 36px;
+		    width: 1px;
+		    background: #cccccc;
+		    top: -7px;
+		}
 	}
 }
 
+.controller{
+	padding: 10px 0;
+	margin: 15px 0;
+}
+
 .people-row {
-	border: 1px solid #cccccc;
 	border-left: 5px solid #58a4f2;
 	padding: 10px 20px;
-	margin: 15px 20px;
+	margin: 15px 0;
 	height: 60px;
-	font-size: 14px;
 
 	.profile-avatar a{
 		font-size: 14px;
@@ -47,5 +67,32 @@
     	a{
     		color: inherit;
     	}
+	}
+
+	&:last-of-type{
+		margin-bottom: 0;
+	}
+}
+
+
+.filters-siderbar{
+	height: 100%;
+	padding: 20px;
+
+	.Select-input{
+		width: 100%;
+	}
+
+	input{
+		width: 100%!important;
+	}
+
+	label{
+		font-weight: bold;
+		margin-bottom: 10px;
+	}
+
+	fieldset{
+		margin-bottom: 20px;
 	}
 }
