--- a/web/src/containers/style.scss
+++ b/web/src/containers/style.scss
@@ -2,7 +2,7 @@ body {
 	background: #edf0f9;
 	font-family: 'Roboto', sans-serif;
 	margin: 0;
-	padding: 0; 
+	padding: 0; 	
 }
 
 h1, h2, h3, h4, h5, h6, 
@@ -39,7 +39,7 @@ a{
 
 /**
  * Buttons
-*/
+ */
 
 .btn{
 	padding: 10px;
@@ -60,4 +60,262 @@ a{
 
 .btn-grey{
 
+}
+
+
+/**
+ * Common Component Classes 
+ */
+
+.outline-grey{
+	border: 1px solid #cccccc;
+}
+
+
+/**
+ * Common Form styles 
+ */
+fieldset{
+	border: none;
+	margin: 0;
+	padding: 0;
+}
+
+label{
+	display: block;
+}
+
+.Select {
+	position: relative;
+
+	// handle disabled state
+	&.is-disabled > .Select-control {
+		background-color: #000000;
+		&:hover {
+			box-shadow: none;
+		}
+	}
+	&.is-disabled .Select-arrow-zone {
+		cursor: default;
+		pointer-events: none;
+	}
+}
+
+.Select-control {
+	background-color: #ffffff;
+	border-color: lighten(#cccccc, 5%) #cccccc darken(#cccccc, 10%);
+	border-radius: 3px;
+	border: 1px solid #cccccc;
+	color: #cccccc;
+	cursor: default;
+	display: table;
+	border-spacing: 0;
+	border-collapse: separate;
+	outline: none;
+	overflow: hidden;
+	position: relative;
+	padding: 10px 20px;
+	width: 100%;
+
+	&:hover {
+		box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
+	}
+
+	.Select-input:focus {
+		outline: none;
+	}
+}
+
+.is-searchable {
+	&.is-open > .Select-control {
+		cursor: text;
+	}
+}
+
+.is-open > .Select-control {
+	border-radius: 0 0 3px 3px;
+	background: #ffffff;
+	border-color: darken(#cccccc, 10%) #cccccc lighten(#cccccc, 5%);
+
+	// flip the arrow so its pointing up when the menu is open
+	.Select-arrow {
+		top: -2px;
+		border-color: transparent transparent #cccccc;
+		border-width: 5px 5px 5px;
+	}
+}
+
+.is-searchable {
+	&.is-focused:not(.is-open) > .Select-control {
+		cursor: text;
+	}
+}
+
+.is-focused:not(.is-open) > .Select-control {
+	border-color: #cccccc lighten(#cccccc, 5%) lighten(#cccccc, 5%);
+	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1), 0 0 5px -1px fade(#cccccc,50%);
+}
+
+.Select-option{
+	width: 100%;
+	border: 1px solid #cccccc;
+	border-bottom: none;
+
+	&:last-of-type{
+		border-bottom: 1px solid #cccccc;
+	}
+}
+
+// placeholder
+.Select-placeholder,
+.Select--single > .Select-control .Select-value {
+	bottom: 0;
+	color: #cccccc;
+	left: 0;
+	line-height: 1.2;
+	position: absolute;
+	right: 0;
+	top: 0;
+
+	// crop text
+	max-width: 100%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+.has-value.Select--single > .Select-control .Select-value,
+.has-value.is-pseudo-focused.Select--single > .Select-control .Select-value {
+	.Select-value-label {
+		color: #cccccc;
+	}
+	a.Select-value-label {
+		cursor: pointer;
+		text-decoration: none;
+
+		&:hover,
+		&:focus {
+			color: #cccccc;
+			outline: none;
+			text-decoration: underline;
+		}
+	}
+}
+
+
+// the <input> element users type in
+
+.Select-input {
+	// inherits `display: inline-block` from "react-input-autosize"
+	vertical-align: middle;
+
+	> input {
+		background: none transparent;
+		border: 0 none;
+		box-shadow: none;
+		cursor: default;
+		display: inline-block;
+		font-family: inherit;
+		font-size: inherit;
+		// height: $select-input-internal-height;
+		margin: 0;
+		outline: none;
+		// padding: 0;
+		line-height: 14px;  /* For IE 8 compatibility */
+		-webkit-appearance: none;
+
+		.is-focused & {
+			cursor: text;
+		}
+	}
+
+}
+
+// fake-hide the input when the control is pseudo-focused
+.has-value.is-pseudo-focused .Select-input {
+	opacity: 0;
+}
+
+// fake input
+.Select-control:not(.is-searchable) > .Select-input {
+	outline: none;
+}
+
+// the little cross that clears the field
+
+.Select-clear-zone {
+	color: #cccccc;
+	cursor: pointer;
+	display: table-cell;
+	position: relative;
+	text-align: center;
+	vertical-align: middle;
+
+	&:hover {
+		color: #cccccc;
+	}
+}
+.Select-clear {
+	display: inline-block;
+	font-size: 12px;
+	line-height: 1;
+}
+.Select--multi .Select-clear-zone {
+	width: 100%;
+}
+
+.Select--multi .Select-multi-value-wrapper {
+  display: inline-block;
+}
+.Select .Select-aria-only {
+	display: inline-block;
+	height: 1px;
+	width: 1px;
+	margin: -1px;
+	clip: rect(0,0,0,0);
+	overflow: hidden;
+}
+
+
+// arrow indicator
+
+.Select-arrow-zone {
+	cursor: pointer;
+	display: table-cell;
+	position: relative;
+	text-align: center;
+	vertical-align: middle;
+	width: 25px;
+	padding-right: 20px;
+}
+
+.Select-arrow {
+	border-color: #cccccc transparent transparent;
+	border-style: solid;
+	border-width: 5px 5px 5px;
+	display: inline-block;
+	height: 0;
+	width: 0;
+	position: relative;
+}
+.is-open .Select-arrow,
+.Select-arrow-zone:hover > .Select-arrow {
+	border-top-color: #ccccccc;
+}
+
+
+
+
+// Animation
+// ------------------------------
+
+// fade in
+
+@-webkit-keyframes Select-animation-fadeIn {
+	from { opacity: 0; }
+	to { opacity: 1; }
+}
+@keyframes Select-animation-fadeIn {
+	from { opacity: 0; }
+	to { opacity: 1; }
 }
