--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -2127,6 +2127,7 @@ label {
   outline: none;
   overflow: hidden;
   position: relative;
+  padding: 10px 20px;
   width: 100%; }
   .Select-control:hover {
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06); }
