--- a/app/Resources/views/app-base.html.twig
+++ b/app/Resources/views/app-base.html.twig
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="{{ asset('/assets/css/fonts.css') }}" />
         <link rel="stylesheet" href="{{ asset('/assets/css/style.css') }}" />
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     </head>
     <body>
         {% block body %}{% endblock %}
