--- a/web/src/components/navigation/style.scss
+++ b/web/src/components/navigation/style.scss
@@ -1,8 +1,9 @@
 nav.navigation-top{
 	background: #FFFFFF;
-	margin-left: 80px;
-	padding: 20px;
-	width: calc( 100% - 80px);
+    margin: 0 0 -140px 80px;
+    padding: 20px;
+    width: calc( 100% - 80px);
+    border-bottom: 150px solid #58a4f2;
 
 	h1{
 		color: #58a4f2;
