--- a/web/src/containers/style.scss
+++ b/web/src/containers/style.scss
@@ -1,5 +1,6 @@
 body {
-	background: #edf0f9;
+	//background: #edf0f9;
+	background: #ffffff;
 	font-family: 'Roboto', sans-serif;
 	margin: 0;
 	padding: 0; 	
@@ -14,6 +15,7 @@ p, a, span, div{
 
 a{
 	text-decoration: none;
+	color: #58a4f2;
 }
 
 * {
@@ -24,12 +26,13 @@ a{
 .app-container{
 	padding: 40px 40px 40px 120px;
 	width: 100%;
+	margin: 0;
 }
 
 .block{
 	background: #ffffff;
-	border-radius: 5px;
-	box-shadow: 0 0 5px rgba(152, 152, 152, 0.1);
+	//border-radius: 5px;
+	//box-shadow: 0 0 5px rgba(152, 152, 152, 0.1);
 
 	.block-wrapper{
 		padding: 30px;
@@ -47,8 +50,9 @@ a{
     border-radius: 3px;
     color: #ffffff;
     display: inline-flex;
-    transition: background-color 0.2s ease;
-    
+    transition: all 0.2s ease;
+    text-align: center;
+
     &:hover{
     	background-color: #4d94de;
     }
@@ -58,8 +62,15 @@ a{
 	padding: 15px 50px;
 }
 
-.btn-grey{
+.btn-grey-outline{
+	background: transparent;
+	border: 1px solid #cccccc;
+	color: #cccccc;
 
+	&:hover{
+		background: #f1f1f1;
+		color: #2d2e39;
+	}
 }
 
 
