login page updates

--- a/app/Resources/views/app-base.html.twig
+++ b/app/Resources/views/app-base.html.twig
@@ -11,7 +11,7 @@
         
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     </head>
-    <body>
+    <body class="{% block bodyClasses %}{% endblock %}">
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
         <div id="app" />
