--- a/web/assets/scss/login/login.scss
+++ b/web/assets/scss/login/login.scss
@@ -1,3 +1,52 @@
-body{
-	background: red; 
+body.login-tpl{
+	background: $blue url() center center no-repeat;
+	display: table;
+	width: 100%;
+	font-weight: 300;
+
+	.login-left{
+		width: 70%;
+		display: table-cell;
+		min-height: 100%;
+		color: $white;
+	}
+
+	.login-right{
+		width:  30%;
+		display: table-cell;
+		min-height: 100%;
+		background: $white;
+		color: $blue;
+		text-align: center;
+	}
+
+	h3 {
+		font-weight: 300;
+	}
+
+	p{
+		margin-bottom: 30px;
+	}
+	
+	h1{		
+		font-weight: 300;
+		font-size: 54px;
+		margin-bottom: 15px;
+
+		span{
+			display: block;
+			font-size: 36px;
+		}
+	}
+
+
+	// &::after{
+	// 	content: "";
+	// 	position: absolute;
+	// 	width: 20%;
+	// 	background: $white;
+	// 	right: 0;
+	// 	top: 0;
+	// 	bottom: 0;
+	// }
 }
