--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -2432,6 +2432,8 @@ nav.navigation-top {
       margin: 30px 10px 0 0; }
 .people-panel {
   padding: 30px 20px; }
+.people-panel {
+  padding: 30px 20px; }
 .profile-links {
   list-style: none;
   margin: 40px 0 0;
