--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -2432,7 +2432,71 @@ nav.navigation-top {
       margin: 30px 10px 0 0; }
 .people-panel {
   padding: 30px 20px; }
-.people-panel {
+.rbc-calendar {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 580px; }
+  .rbc-calendar .rbc-month-header {
+    display: flex;
+    flex-direction: row; }
+  .rbc-calendar .rbc-month-view {
+    position: relative;
+    border: 1px solid #DDD;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex: 1 0 0px;
+    flex: 1 0 0;
+    width: 100%;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    height: 100%; }
+  .rbc-calendar .rbc-month-row {
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex: 1 0 0px;
+    flex: 1 0 0;
+    overflow: hidden;
+    height: 100%;
+    border-top: 1px solid #DDD; }
+  .rbc-calendar .rbc-row {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: row;
+    flex-direction: row; }
+  .rbc-calendar .rbc-row-content {
+    position: relative;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    z-index: 4; }
+  .rbc-calendar .rbc-row-bg {
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0; }
+  .rbc-calendar .rbc-row-bg {
+    display: flex;
+    flex-direction: row;
+    flex: 1 0 0;
+    overflow: hidden; }
+  .rbc-calendar .rbc-date-cell {
+    display: flex; }
+  .rbc-calendar .rbc-day-bg {
+    border-left: 1px solid #DDD; }
+.planner {
   padding: 30px 20px; }
 .profile-links {
   list-style: none;
